some styling, looks like how swamp ass feels..

--- a/src/components/appointments/Appointments.css
+++ b/src/components/appointments/Appointments.css
@@ -76,19 +76,35 @@
 }
 
 .appointment__header {
-    font-family: system-ui,-apple-system,system-ui,"Helvetica Neue",Helvetica,Arial,sans-serif;
+    font-family: 'Nunito', sans-serif;
     font-style: italic;
     font-size: 1.5rem;
     line-height: 3rem
 }
 .appointmentClaim__tag {
+    font-family: 'Nunito', sans-serif;
     font-style: italic
 }
 
-h2 {
+.appointmentList {
+    display: flex;
+    justify-content: center;
+    font-family: 'Nunito', sans-serif;
     font-style: italic
 }
 
 p {
+    font-family: 'Nunito', sans-serif;
     font-style: italic
 }
+
+body {
+  background-color: #C1ABA6;
+}
+
+.appointment {
+  display: inline-grid;
+  grid-template-rows:    minmax(100px, auto);
+  grid-template-columns: minmax(auto, 50%) 1fr 3em;
+  justify-content: flex-start;
+  box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;}
