--- a/src/components/nav/NavBar.css
+++ b/src/components/nav/NavBar.css
@@ -5,8 +5,8 @@
     top: 0;
     left: 0;
     width: 100%;
-    background: rgb(136, 73, 73);
-    box-shadow: 0 4px 0 rgba(0, 0, 0, 0.4);
+    background: #533b4d;
+    box-shadow: 0 2px 0 rgba(0, 0, 0, 0.4);
     z-index: 10;
 }
 
@@ -18,20 +18,19 @@
 .navbar__link:link {
     color: black;
     display: block;
-    font-size: 1.0rem;
+    font-size: 1.2rem;
     padding: 2rem;
-    transition: all 0.15s ease-out;
+    transition: all 0.5s ease-out;
 }
 
 .navbar__link:hover {
-    background: lightblue;
+    background: #fae3c6;
   }
 .navbar__link:active {
-    color: goldenrod;
-    background: red;
+    background: #533b4d;
   }
 .navbar__link:visited {
-    color: purple;
+    color: gray;
     
   }
 
